# seo-platform

./: .env.example  .gitignore  README.md  alembic.ini  deploy.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
app/: config.py  main.py
app/admin/: setup.py
app/api/v1/: deps.py  router.py
app/api/v1/endpoints/: auth.py  billing.py  dashboard.py  users.py
app/core/: db.py  security.py
app/crud/: user.py
app/middleware/: logging.py
app/models/: base.py  user.py
app/models/billing/: models.py
app/models/competitors/: models.py  router.py  service.py
app/models/rank_tracking/: models.py  router.py  service.py  tasks.py
app/models/seo_data/: models.py  router.py  service.py  tasks.py
app/models/seo_data/providers/: base.py  openserp.py  seo_analyzer.py  xmlriver.py  xmlriver_provider.py  yandex_wordstat.py
app/schemas/: user.py
app/tasks/: celery_app.py  example.py
docker/: Dockerfile  entrypoint.sh  nginx.conf
frontend/src/: app.js  index.html
frontend/src/api/: client.js
frontend/src/pages/: dashboard.js
frontend/src/utils/: router.js
nginx/: default.conf  nginx.conf
tests/: conftest.py  test_auth.py
