[tool.poetry]
name = "seo-platform"
version = "0.1.0"
description = "SEO platform skeleton"
authors = ["Your Name <email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
celery = {extras = ["redis"], version = "^5.4.0"}
redis = "^5.0.7"
pydantic-settings = "^2.3.3"
prometheus-fastapi-instrumentator = "^7.0.0"
sqladmin = "^0.18.0"
httpx = "^0.27.0"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
structlog = "^24.2.0"
requests = "^2.31.0"
itsdangerous = "^2.2.0"
fastapi-limiter = "^0.1.6"

[tool.poetry.dev-dependencies]
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
