[tool.poetry]
name = "seo-platform"
version = "0.1.0"
description = "SEO analytics platform with FastAPI, PostgreSQL, Redis, Celery"
authors = ["Your Name <your@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.5.0"}
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "<4.2"
celery = "^5.3.0"
redis = "^5.0.0"
prometheus-fastapi-instrumentator = "^6.1.0"
fastapi-limiter = "^0.1.6"
alembic = "^1.13.0"
structlog = "^24.1.0"
httpx = "^0.26.0"
psycopg2-binary = "^2.9.9"
# === ДОБАВЬТЕ ЭТУ СТРОКУ ===
sqladmin = "^0.19.0"  # ← ← ← Админ-панель для SQLAlchemy
itsdangerous = "^2.1.2" 

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.23.0"
black = "^24.1.0"
isort = "^5.13.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
